[gd_scene load_steps=5 format=3 uid="uid://nvi3u6lv7ihv"]

[ext_resource type="Script" uid="uid://buf5xijk2jybj" path="res://playable/grid/grid.gd" id="1_bdslu"]
[ext_resource type="Texture2D" uid="uid://ddydmbdcpjj35" path="res://assets/grid/default.png" id="2_18dh2"]
[ext_resource type="Texture2D" uid="uid://c36uadvm4ayj0" path="res://assets/grid/Group 1.png" id="3_18dh2"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_18dh2"]
light_mode = 2

[node name="Grid_Box" type="Control" node_paths=PackedStringArray("icon", "box", "border")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bdslu")
icon = NodePath("Icon")
box = NodePath("Box")
border = NodePath("Border")

[node name="Box" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 160)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_18dh2")
expand_mode = 1
stretch_mode = 5

[node name="Border" type="TextureRect" parent="."]
light_mask = 0
material = SubResource("CanvasItemMaterial_18dh2")
custom_minimum_size = Vector2(160, 160)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_18dh2")
expand_mode = 1
stretch_mode = 5

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
light_mask = 4
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = -45.0
offset_top = -47.0
offset_right = 15.0
offset_bottom = 13.0
expand_mode = 1
stretch_mode = 5

[node name="Marker" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-16, -16)

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
